--- a/package.json
+++ b/package.json
@@ -34,13 +34,20 @@
     "axios": "^0.18.0",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
+    "fast-csv": "^2.5.0",
     "file-loader": "^3.0.1",
+    "flat": "^4.1.0",
+    "fs": "0.0.1-security",
     "mongoose": "^5.5.8",
     "morgan": "^1.9.1",
+    "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
+    "pg": "^7.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "sequelize": "^5.8.7",
     "style-loader": "^0.23.1"
   }
 }
