--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack-combine-loaders": "^2.0.4"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "faker": "^4.1.0",
@@ -42,6 +42,7 @@
     "mongoose": "^5.5.8",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
+    "newrelic": "^5.10.0",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "pg": "^7.11.0",
