--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pg": "^7.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "redis": "^2.8.0",
     "sequelize": "^5.8.7",
     "style-loader": "^0.23.1"
   }
